<resources>
    <string name="app_name">联动测试</string>
    <string name="iccid">ICCID</string>
    <string name="imei">IMEI</string>
    <string name="imsi">IMSI</string>
    <string name="btn_txt_share">分享设备信息</string>
    <string name="btn_txt_share_response">分享服务器返回值</string>
    <string name="btn_txt_upload">上传设备信息</string>
    <string name="txt_response">返回值：</string>
    <string name="banner_ad_unit_id">ca-app-pub-1144530986936310/9995154589</string>
    <string name="txt_net_error">网络连接失败！</string>
    <string name="txt_empty">没有内容可分享！</string>
    <string name="txt_uploading">上传中……</string>
    <string name="txt_upload_complete">上传完毕！</string>
    <string name="txt_null">null</string>
    <string name="btn_verify_txt">验证验证码</string>
    <string name="et_mobile_hint">请输入手机号</string>
    <string name="btn_get_txt2">秒后重试</string>
    <string name="btn_get_txt1">获取验证码</string>
    <string name="et_hint_verifycode">请输入验证码</string>
    <string name="txt_get_verifycode">请获取验证码</string>
    <string name="txt_waiting">请稍等……</string>
    <string name="txt_verify_complete">验证完毕！</string>
</resources>
