<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="viewModel"
            type="com.laole918.umpaytest.viewmodel.MainViewModel" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/iccid"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/textSize" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@{TextUtils.isEmpty(viewModel.order.iccid) ? @string/txt_null : viewModel.order.iccid}"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/textSize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/imei"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/textSize" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@{TextUtils.isEmpty(viewModel.order.imei) ? @string/txt_null : viewModel.order.imei}"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/textSize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/imsi"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/textSize" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@{TextUtils.isEmpty(viewModel.order.imsi) ? @string/txt_null : viewModel.order.imsi}"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/textSize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{viewModel.onClickShare}"
                        android:text="@string/btn_txt_share"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/btnTextSize" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{viewModel.onClickUpload}"
                        android:text="@string/btn_txt_upload"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/btnTextSize" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_response"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/textSize" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.order == null ? null : String.valueOf(viewModel.order.return_str)}"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/textSize" />
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{viewModel.onClickShareResponse}"
                    android:text="@string/btn_txt_share_response"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/btnTextSize" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/div_height"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="#dddddd" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="请输入手机号"
                        android:textColorHint="#999999"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/textSize"
                        android:text="@={viewModel.order.mobile}"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{viewModel.onClickGetCode}"
                        android:text="获取验证码"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/btnTextSize" />
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="@{viewModel.onClickVerifyCode}"
                    android:text="验证验证码"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/btnTextSize" />
            </LinearLayout>
        </ScrollView>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </FrameLayout>
</layout>

